--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
       href="./images/favicon-32x32.png"
     />
 
-    <title>Frontend Mentor | Social proof section</title>
+    <!-- Bootstrap 5.0 cdn -->
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <!-- CSS stylesheet -->
+    <link rel="stylesheet" href="style.css">
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <title>Frontend Mentor | Social proof section</title>
   </head>
+  
   <body>
-    <p>test1</p>
-    10,000+ of our users love our products.
+   <header role="main-title">
+    <h1>10,000+ of our users love our products.</h1>
+   </header>
+    
 
     We only provide great products combined with excellent customer service.
     See what our satisfied customers are saying about our services.
