--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <main>
     <div class="container">
       <div class="row">
-        <div class="col-lg-6">
-          <header id="heading">
+        <div class="col-lg-6 heading">
+          <header>
             <h1>10,000+ of our users love our products.</h1>
             <p>We only provide great products combined with excellent customer service.
               See what our satisfied customers are saying about our services.</p>
