--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
               See what our satisfied customers are saying about our services.</p>
           </header>
         </div>
-        <div class="col-lg-6">
-          <section id="rating">
+        <div class="col-lg-6 rating">
+          <section>
             <!-- first rate card -->
             <article>
               <div class="card">
