--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
 
-  <div class="container" role="main">
+  <div class="container-fluid" role="main">
     <div class="row">
       <div class="col-lg-6 heading" role="banner">
 
@@ -81,7 +81,7 @@
 
         
       </div>
-      <div class="col review-section" role="region">     
+      <div class="col review-section container-fluid" role="region">     
 
           <!-- Review 1 -->
           
