added star for rating

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
         <div class="card rating_1 rate">
           <div class="card-body">
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
+            <img class="star-rating" src="images/icon-star.svg" alt="customer-rating">
+            <img class="star-rating" src="images/icon-star.svg" alt="customer-rating">
+            <img class="star-rating" src="images/icon-star.svg" alt="customer-rating">
+            <img class="star-rating" src="images/icon-star.svg" alt="customer-rating">
+            <img class="star-rating" src="images/icon-star.svg" alt="customer-rating">
             <p class="rate-description">Rated 5 Stars in Reviews</p>
           </div>
         </div>
@@ -59,11 +59,11 @@
 
         <div class="card rating_2 rate">
           <div class="card-body">
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
+            <img class="star-rating" src="images/icon-star.svg" alt="customer-rating">
+            <img class="star-rating" src="images/icon-star.svg" alt="customer-rating">
+            <img class="star-rating" src="images/icon-star.svg" alt="customer-rating">
+            <img class="star-rating" src="images/icon-star.svg" alt="customer-rating">
+            <img class="star-rating" src="images/icon-star.svg" alt="customer-rating">
             <p class="rate-description">Rated 5 Stars in Report Guru</p>
           </div>
         </div>
@@ -73,11 +73,11 @@
 
         <div class="card rating_3 rate">
           <div class="card-body">
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
+            <img class="star-rating" src="images/icon-star.svg" alt="customer-rating">
+            <img class="star-rating" src="images/icon-star.svg" alt="customer-rating">
+            <img class="star-rating" src="images/icon-star.svg" alt="customer-rating">
+            <img class="star-rating" src="images/icon-star.svg" alt="customer-rating">
+            <img class="star-rating" src="images/icon-star.svg" alt="customer-rating">
             <p class="rate-description">Rated 5 Stars in BestTech</p>
           </div>
         </div>
