added github link

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
-        href="#">Hamsalekha</a>.
+        href="https://www.frontendmentor.io/profile/LekhaKumar">Hamsalekha</a>.
     </div>
   </footer>
 </body>
